fixed waybar annoyance

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -25,5 +25,5 @@ listener {
 listener {
     timeout = 930                                                     # 15.5min
     on-timeout = hyprctl dispatch dpms off                            # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on && brightnessctl -r          # screen on when activity is detected after timeout has fired.
+    on-resume = hyprctl dispatch dpms on && brightnessctl -r && systemctl --user restart waybar.service         # screen on when activity is detected after timeout has fired.
 }
