--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,31 +22,8 @@
 ### MONITORS ###
 ################
 
-$main = DP-1
-$second = HDMI-A-1
-
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor=,highres,auto-left,auto
-workspace = 1, monitor:$main
-workspace = 2, monitor:$main
-workspace = 3, monitor:$main
-workspace = 4, monitor:$main
-workspace = 5, monitor:$main
-workspace = 6, monitor:$main
-workspace = 7, monitor:$main
-workspace = 8, monitor:$main
-workspace = 9, monitor:$main
-workspace = 10, monitor:$main
-workspace = 11, monitor:$second
-workspace = 12, monitor:$second
-workspace = 13, monitor:$second
-workspace = 14, monitor:$second
-workspace = 15, monitor:$second
-workspace = 16, monitor:$second
-workspace = 17, monitor:$second
-workspace = 18, monitor:$second
-workspace = 19, monitor:$second
-workspace = 20, monitor:$second
 
 ###################
 ### MY PROGRAMS ###
@@ -55,9 +32,9 @@ workspace = 20, monitor:$second
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = uwsm app -- kitty
 $fileManager = dolphin
-$browser = vivaldi
+$browser = uwsm app -- vivaldi --new-window --ozone-platform=wayland
 $webapp = $browser --app
 $menu = wofi --show drun
 
@@ -72,7 +49,11 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = vivaldi & discord
+exec-once = systemctl --user enable --now waybar.service
+exec-once = systemctl --user enable --now ssh-agent.service
+exec-once = systemctl --user enable --now hypridle.service
+exec-once = systemctl --user enable --now hyprpolkitagent.service
+exec-once = systemctl --user enable --now swaync.service
 
 #for libadwaita gtk4 apps you can use this command:
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
@@ -270,9 +251,9 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, return, exec, uwsm app -- $terminal
+bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive
-bind = $mainMod, B, exec, uwsm app -- $browser
+bind = $mainMod, B, exec, $browser
 bind = $mainMod, M, exec, uwsm stop
 bind = $mainMod, E, exec, uwsm app -- $fileManager
 bind = $mainMod, V, togglefloating,
@@ -280,10 +261,11 @@ bind = $mainMod, D, exec, uwsm app -- $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod CONTROL, E, exec, uwsm app -- $webapp=https://emby.dreamcare.cloud/
-bind = $mainMod CONTROL, O, exec, uwsm app -- $webapp=https://outlook.office365.com/
-bind = $mainMod CONTROL, T, exec, uwsm app -- $webapp=https://teams.microsoft.com/
-bind = $mainMod CONTROL, Y, exec, uwsm app -- $webapp=https://www.youtube.com/
+bind = $mainMod CONTROL, D, exec, $webapp=https://discord.com/app/
+bind = $mainMod CONTROL, E, exec, $webapp=https://emby.dreamcare.cloud/
+bind = $mainMod CONTROL, O, exec, $webapp=https://outlook.office365.com/
+bind = $mainMod CONTROL, T, exec, $webapp=https://teams.microsoft.com/
+bind = $mainMod CONTROL, Y, exec, $webapp=https://www.youtube.com/
 
 bind = $mainMod, R, submap, resize
 submap=resize
@@ -389,13 +371,26 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
-windowrule = workspace 9, noinitialfocus, suppressevent activatefocus, class:steam.*
-windowrule = workspace 10, content game, decorate off, class:steam_app_[0-9]+
-
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
+
+# Force Vivaldi into a tile to deal with --app bug
+windowrule = tile, class:Vivaldi-stable
+
+# Float and center file pickers
+windowrule = float, class:xdg-desktop-portal-gtk, title:^(Open.*Files?|Save.*Files?|All Files|Save)
+windowrule = center, class:xdg-desktop-portal-gtk, title:^(Open.*Files?|Save.*Files?|All Files|Save)
+
+# Just dash of opacity
+windowrule = opacity 1 0.97, class:.*
+
+# Steam specific exceptions
+windowrule = workspace 10, content game, decorate off, noinitialfocus, suppressevent activatefocus, class:steam.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/workspaces.conf
+
+source = ~/.config/hypr/bindings.conf
