--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -48,14 +48,14 @@
         "window-rewrite": {
             "class<steam_app_[0-9]+>": "",
             "class<Vivaldi.*>": "",
-            "class<discord>": "",
+            ".*discord.*": "",
             "class<hexchat>": "",
             "class<kitty>": "",
             "class<steam>": "",
 	    "class<.*Telegram.*>": "",
             "class<jetbrains-idea>": "",
             "title<Picture in picture>": "",
-	    "title<.*youtube.*>": "",
+	    ".*youtube.com.*": "",
 	    "title<.*management.*screen.*>": "#",
 	    "title<.*emby.dreamcare.cloud.*>": "",
 	    "title<.*outlook.*>": "",
