--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ $terminal = uwsm app -- kitty
 $fileManager = dolphin
 $browser = uwsm app -- vivaldi --new-window --ozone-platform=wayland
 $webapp = $browser --app
-$menu = wofi --show drun
+$menu = wofi --show drun -i --gtk-dark
 
 
 #################
