--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -54,6 +54,7 @@ exec-once = systemctl --user enable --now ssh-agent.service
 exec-once = systemctl --user enable --now hypridle.service
 exec-once = systemctl --user enable --now hyprpolkitagent.service
 exec-once = systemctl --user enable --now swaync.service
+exec-once = systemctl --user enable --now hyprpaper.service && sleep 5 && ~/.config/hypr/hyprpaper.sh
 
 #for libadwaita gtk4 apps you can use this command:
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
@@ -204,8 +205,9 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -390,7 +392,10 @@ windowrule = workspace 10, content game, decorate off, noinitialfocus, suppresse
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+windowrule = float,class:qalculate-gtk
+
 source = ~/.config/hypr/monitors.conf
 source = ~/.config/hypr/workspaces.conf
 
 source = ~/.config/hypr/bindings.conf
+
