--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -391,7 +391,7 @@ windowrule = opacity 0.90 0.94, class:foot
 windowrule = workspace 10, content game, decorate off, noinitialfocus, suppressevent activatefocus, class:steam.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = prop nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 windowrule = float,class:qalculate-gtk
 
