--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,7 +31,7 @@ exec-once = systemctl --user enable --now hyprpaper.service             # pacman
 exec-once = systemctl --user enable --now hypridle.service              # pacman -S hypridle hyprlock
 exec-once = systemctl --user enable --now hyprpolkitagent.service       # pacman -S hyprpolkitagent
 exec-once = systemctl --user enable --now swaync.service                # pacman -S swaync
-exec-once = systemctl --user enable --now ssh-agent.service             # pacman -S ssh-agent
+exec-once = systemctl --user enable --now ssh-agent.service             # pacman -S openssh
 exec-once = systemctl --user enable --now gnome-keyring-daemon.service  # pacman -S gnome-keyring
 
 # Configure dark-theme
@@ -226,8 +226,6 @@ xwayland {
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
-# Only display the OSD on the currently focused monitor
-$osdclient = swayosd-client --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.focused == true).name')"
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
@@ -330,33 +328,18 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-#bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-#bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-#bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-#bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-#bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-#bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Requires playerctl
-#bindl = , XF86AudioNext, exec, playerctl next
-#bindl = , XF86AudioPause, exec, playerctl play-pause
-#bindl = , XF86AudioPlay, exec, playerctl play-pause
-#bindl = , XF86AudioPrev, exec, playerctl previous
-
-
-# Laptop multimedia keys for volume and LCD brightness (with OSD)
-bindel = ,XF86AudioRaiseVolume, exec, $osdclient --output-volume raise
-bindel = ,XF86AudioLowerVolume, exec, $osdclient --output-volume lower
-bindel = ,XF86AudioMute, exec, $osdclient --output-volume mute-toggle
-bindel = ,XF86AudioMicMute, exec, $osdclient --input-volume mute-toggle
-bindel = ,XF86MonBrightnessUp, exec, $osdclient --brightness raise
-bindel = ,XF86MonBrightnessDown, exec, $osdclient --brightness lower
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, $osdclient --playerctl next
-bindl = , XF86AudioPause, exec, $osdclient --playerctl play-pause
-bindl = , XF86AudioPlay, exec, $osdclient --playerctl play-pause
-bindl = , XF86AudioPrev, exec, $osdclient --playerctl previous
+bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPause, exec, playerctl play-pause
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Cycle through applications on active workspace
 bind = ALT, Tab, cyclenext
