--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -32,19 +32,18 @@ exec-once = systemctl --user enable --now hypridle.service              # pacman
 exec-once = systemctl --user enable --now hyprpolkitagent.service       # pacman -S hyprpolkitagent
 exec-once = systemctl --user enable --now swaync.service                # pacman -S swaync
 exec-once = systemctl --user enable --now ssh-agent.service             # pacman -S openssh
-exec-once = systemctl --user enable --now gnome-keyring-daemon.service  # pacman -S gnome-keyring
 
 # Configure dark-theme
-#exec-once = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"
-#exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+exec-once = gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
-#env = GTK_THEME,adw-gtk3
-#env = QT_QPA_PLATFORMTHEME,qt6ct
+env = GTK_THEME,adw-gtk3-dark
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 env = XCURSOR_THEME,future-dark
 env = XCURSOR_SIZE,24
@@ -231,7 +230,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive
 bind = $mainMod, B, exec, $browser
-bind = $mainMod SHIFT, E, exec, uwsm stop
+bind = $mainMod ALT, delete, exec, uwsm stop
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
@@ -322,14 +321,13 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
@@ -345,6 +343,13 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bind = ALT, Tab, cyclenext
 bind = ALT, Tab, bringactivetotop
 
+
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot --freeze -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -z -m output
+# Screenshot a region
+bind = $mainMod SHIFT, PRINT, exec, hyprshot -z -m region
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
