--- a/.local/share/applications/Links/EmbyTheater.desktop
+++ b/.local/share/applications/Links/EmbyTheater.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Name=Emby
+Name=Emby Theater
 URL=https://emby.dreamcare.cloud
 Icon=media.emby.EmbyTheater
 Type=Link
