--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,14 @@
 # Refer to the wiki for more information.
 # https://wiki.hypr.land/Configuring/
 
+# Defaults, please don't edit. Change settings.conf instead.
+$xwayland   = true
+$mainMod    = SUPER
+$browser    = firefox --new-window
+$webapp     = $browser --kiosk
+
+source = ~/.config/hypr/settings.conf
+
 ################
 ### MONITORS ###
 ################
@@ -16,10 +24,8 @@ source = ~/.config/hypr/monitors.conf                                   # pacman
 # See https://wiki.hypr.land/Configuring/Keywords/
 $terminal = uwsm app -- foot                                            # pacman -S foot fish
 $fileManager = uwsm app -- nautilus --new-window                        # pacman -S nautilus
-$browser = uwsm app -- vivaldi --ozone-platform=wayland --new-window    # pacman -S vivaldi
-$menu = uwsm app -- rofi -show drun \
-    -run-command '.local/bin/webapp {cmd}' \
-    -drun-url-launcher "$browser --app="                                # pacman -S rofi-wayland
+$browser = uwsm app -- $browser
+$menu = uwsm app -- rofi -show drun -run-command '.local/bin/webapp {cmd}' -drun-url-launcher "$webapp"
 
 #################
 ### AUTOSTART ###
@@ -216,7 +222,7 @@ device {
 }
 
 xwayland {
-    enabled = false
+    enabled = $xwayland
 }
 
 ###################
@@ -227,18 +233,18 @@ xwayland {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, return, exec, $terminal
+bind = $mainMod, T, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive
 bind = $mainMod, B, exec, $browser
-bind = $mainMod ALT, delete, exec, uwsm stop
+bind = CTRL ALT, backspace, exec, uwsm stop
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
-# bind = $mainMod, W, exec, $webMenu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod, J, togglesplit, # dwindlew
-bind = $mainMod, L, exec, loginctl lock-session
+bind = $mainMod, L, exec, loginctl lock-session; sleep 15 && hyprctl dispatch dpms off
 
 # Resize active window
 bind = $mainMod, minus, resizeactive, -100 0
@@ -361,12 +367,6 @@ bind = $mainMod SHIFT, PRINT, exec, hyprshot -z -m region
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Force Vivaldi into a tile to deal with --app bug
-windowrule = tile, class:Vivaldi-stable
-
 # Float and center file pickers
 windowrule = float, class:xdg-desktop-portal-gtk, title:^(Open.*Files?|Save.*Files?|All Files|Save)
 windowrule = center, class:xdg-desktop-portal-gtk, title:^(Open.*Files?|Save.*Files?|All Files|Save)
@@ -377,12 +377,21 @@ windowrule = opacity 0.90 0.94, class:foot
 # Steam specific exceptions
 windowrule = workspace 10, content game, decorate off, noinitialfocus, suppressevent activatefocus, class:steam.*
 
-# Fix some dragging issues with XWayland
-windowrule = prop nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 windowrule = float,class:qalculate-gtk
 
 windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
+
+# Force browser into a tile model
+windowrulev2 = tile, class:Vivaldi-stable
+windowrulev2 = fullscreenstate 0 2, class:firefox, fullscreen:1
+windowrulev2 = syncfullscreen 0, class:firefox
+
+# Ignore maximize requests from apps. You'll probably like this.
+windowrule = suppressevent maximize, class:.*
+
+# Fix some dragging issues with XWayland
+windowrule = prop nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 # Generated and managed by ngw-displays
 source = ~/.config/hypr/workspaces.conf
