--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -12,9 +12,10 @@
   // Gaps between modules (4px)
   // Choose the order of the modules
   "modules-left": [
+//    "custom/launcher",
     "hyprland/workspaces",
-    "wlr/taskbar",
-    "mpris"
+    "wlr/taskbar"
+//    "mpris"
   ],
 //  "modules-center": [
 
@@ -33,6 +34,10 @@
     "custom/notification",
     "custom/power"
   ],
+  "custom/launcher": {
+    "format": "",
+    "on-click": "ydotool key 125:1 32:1 32:0 125:0"
+  },
   //Modules configuration
   "hyprland/workspaces": {
     "on-click": "activate",
@@ -181,8 +186,15 @@
   },
   "custom/power": {
     "format": "<span color='#FB6962'></span>",
-    "on-click": "syspower",
-    "tooltip": false
+    "tooltip": false,
+    "menu": "on-click",
+    "menu-file": "~/.config/waybar/power_menu.xml",
+    "menu-actions": {
+      "suspend": "systemctl suspend",
+      "reboot": "reboot",
+      "shutdown": "shutdown",
+      "logout": "uwsm stop"
+    }
   },
   "mpris": {
     "interval": 1,
