--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 !/.config/fontconfig
 !/.config/foot
 !/.config/hypr
+/.config/hypr/settings.conf
+/.config/hypr/monitors.conf
 !/.config/rofi
 !/.config/waybar
 !/.local
@@ -15,3 +17,4 @@
 !/.local/share/applications
 !/.local/share/backgrounds
 !/.local/share/icons
+!/readme.md
