--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -244,7 +244,7 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod, J, togglesplit, # dwindlew
-bind = $mainMod, L, exec, loginctl lock-session; sleep 15 && hyprctl dispatch dpms off
+bind = $mainMod, L, exec, loginctl lock-session
 
 # Resize active window
 bind = $mainMod, minus, resizeactive, -100 0
