--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -113,14 +113,14 @@ general {
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
     rounding = 6
-    rounding_power = 4.0
+    rounding_power = 2.0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 0.94
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
