firefox kiosk mode requires dedicated profile to work properly

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,8 +4,8 @@
 # Defaults, please don't edit. Change settings.conf instead.
 $xwayland   = true
 $mainMod    = SUPER
-$browser    = firefox --new-window
-$webapp     = $browser --kiosk
+$browser    = firefox --new-window -P default-release
+$webapp     = firefox --new-window -P kiosk --no-remote --kiosk
 
 source = ~/.config/hypr/settings.conf
 
@@ -32,6 +32,7 @@ $menu = uwsm app -- rofi -show drun -run-command '.local/bin/webapp {cmd}' -drun
 #################
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
+exec-once = firefox --createProfile kiosk; firefox --createProfile default
 exec-once = systemctl --user enable --now waybar.service                # pacman -S waybar
 exec-once = systemctl --user enable --now hyprpaper.service             # pacman -S hyprpaper
 exec-once = systemctl --user enable --now hypridle.service              # pacman -S hypridle hyprlock
@@ -381,6 +382,8 @@ windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
 
 # Force browser into a tile model
 windowrulev2 = tile, class:Vivaldi-stable
+windowrulev2 = fullscreenstate 0 2, class:Vivaldi-stable, fullscreen:1
+windowrulev2 = syncfullscreen 0, class:Vivaldi-stable
 windowrulev2 = fullscreenstate 0 2, class:firefox, fullscreen:1
 windowrulev2 = syncfullscreen 0, class:firefox
 
