--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -6,6 +6,7 @@
 $xwayland   = true
 
 # Configure main key modifier (used <MOD> + D to open launcher).
+# See https://wiki.hypr.land/Configuring/Keywords/
 # Default: SUPER
 $mainMod    = SUPER
 
@@ -13,8 +14,8 @@ $mainMod    = SUPER
 # Default: firefox
 
 # Firefox
-$browser    = firefox --new-window
-$webapp     = $browser --kiosk
+$browser    = firefox --new-window -P default
+$webapp     = firefox --new-window -P kiosk --no-remote --kiosk
 
 # Vivaldi
 #$browser    = vivaldi --ozone-platform=wayland --new-window
