various style updates

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ source = ~/.config/hypr/monitors.conf                                   # pacman
 $terminal = uwsm app -- foot                                            # pacman -S foot fish
 $fileManager = uwsm app -- nautilus --new-window                        # pacman -S nautilus
 $browser = uwsm app -- $browser
-$menu = uwsm app -- rofi -show drun -run-command '.local/bin/webapp {cmd}' -drun-url-launcher "$webapp"
+$menu = uwsm app -- rofi -show drun -run-command "/home/emily/.local/bin/webapp {cmd}" -drun-url-launcher "$webapp"
 
 #################
 ### AUTOSTART ###
@@ -73,9 +73,10 @@ env = NVD_BACKEND,direct
 # Please note permission changes here require a Hyprland restart and are not applied on-the-fly
 # for security reasons
 
-# ecosystem {
+ecosystem {
+    no_donation_nag = true
 #   enforce_permissions = 1
-# }
+}
 
 # permission = /usr/(bin|local/bin)/grim, screencopy, allow
 # permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
@@ -89,8 +90,8 @@ env = NVD_BACKEND,direct
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 5
+    gaps_in = 2
+    gaps_out = 2
 
     border_size = 1
 
@@ -187,6 +188,7 @@ dwindle {
 misc {
     disable_hyprland_logo = true
     key_press_enables_dpms = true
+    disable_splash_rendering = true
 }
 
 #############
@@ -224,6 +226,7 @@ device {
 
 xwayland {
     enabled = $xwayland
+    force_zero_scaling = true
 }
 
 ###################
@@ -238,7 +241,7 @@ bind = $mainMod, B, exec, $browser
 bind = CTRL ALT, backspace, exec, uwsm stop
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, D, exec, $menu
+bindd = $mainMod, D, app-launcher, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod, J, togglesplit, # dwindlew
@@ -380,7 +383,7 @@ windowrule = float,class:qalculate-gtk
 
 windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
 
-# Force browser into a tile model
+# Force browser into a tile mode
 windowrulev2 = tile, class:Vivaldi-stable
 windowrulev2 = fullscreenstate 0 2, class:Vivaldi-stable, fullscreen:1
 windowrulev2 = syncfullscreen 0, class:Vivaldi-stable
