removed hardcoded path

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ source = ~/.config/hypr/monitors.conf                                   # pacman
 $terminal = uwsm app -- foot                                            # pacman -S foot fish
 $fileManager = uwsm app -- nautilus --new-window                        # pacman -S nautilus
 $browser = uwsm app -- $browser
-$menu = uwsm app -- rofi -show drun -run-command "/home/emily/.local/bin/webapp {cmd}" -drun-url-launcher "$webapp"
+$menu = uwsm app -- rofi -show drun -run-command ".local/bin/webapp {cmd}" -drun-url-launcher "$webapp"
 
 #################
 ### AUTOSTART ###
